@@ -6,8 +6,7 @@ Command-line tool that records the screen as Fragmented MP4 and upload the fragm
 
 ### Download
 
-
-Download the `record-and-upload-VERSION-capsule.jar` from `https://github.com/julianghionoiu/record-and-upload/releases/latest`
+Download the `record-and-upload-PLATFORM-all.jar` from `https://github.com/julianghionoiu/record-and-upload/releases/latest`
 
 ### Configure
 
@@ -23,29 +22,7 @@ s3_prefix=prefix/
 
 ### Run
 
-#### pre-Java 9 versions
-
-```bash
-java -jar record-and-upload-VERSION-capsule.jar --config .private/aws-test-secrets --store ./build/play
-```
-
-#### Java 9 versions
-
-```bash
-java --illegal-access=warn  --add-modules=java.xml.bind,java.activation -jar record-and-upload-VERSION-capsule.jar --config .private/aws-test-secrets --store ./build/play
-```
-
-
 ## Development - building
-
-### Build as a thin maven-based Capsule
-
-This will create a maven based Jar that will download the required dependencies before running the app:
-
-```bash
-./gradlew clean mavenCapsule --info
-rm -R ~/.capsule/deps/ro
-```
 
 ### Build as a OS specific fat Jar
 
@@ -55,23 +32,6 @@ This will crate a maven based Jar that will download the required dependencies b
 ./gradlew shadowJar -i -PvideoArch=macos
 ./gradlew shadowJar -i -PvideoArch=windows
 ./gradlew shadowJar -i -PvideoArch=linux
-```
-
-
-## Development - running
-
-#### Running with pre-Java 9 versions
-
-```bash
-java -jar ./build/libs/record-and-upload-`cat version.txt`-capsule.jar --config .private/aws-test-secrets --store ./build/play
-```
-
-#### Running with Java 9
-
-Ensure `JAVA_HOME` points to the Java 9 SDK home folder. Use `java -version` to check if the java launcher on the `PATH` is version 9.0 (aka 1.9) or higher.
-
-```bash
-java --illegal-access=warn  --add-modules=java.xml.bind,java.activation -jar ./build/libs/record-and-upload-`cat version.txt`-capsule.jar --config .private/aws-test-secrets --store ./build/play
 ```
 
 ## Development - Testing
